# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair_async_rlock"
version = "2.0.0"
description = "A fair async RLock for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache Software License" }
authors = [{ name = "Joshua G. Albert", email = "albert@strw.leidenuniv.nl" }]
keywords = ["async", "fair", "reentrant", "lock", "concurrency"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/joshuaalbert/FairAsyncRLock" }
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
